@@ -4238,6 +4238,36 @@ etpub autobalance features)<br>
 	kills and gibs all players
 </td></tr>
 
+<tr><td>
+	<a name="!freeze"></a>
+	!freeze
+	</td><td>
+	F
+	</td><td>
+	YES
+	</td><td>
+	!freeze [NAME|SLOT] [REASON]
+	</td><td>
+	Freezes the client in slot number SLOT or with name containing NAME.
+	If no parameter is provided it freezes all players.
+	Frozen player(s) cannot be shot during this time.
+	If REASON is specified it is printed to the client.
+</td></tr>
+
+<tr><td>
+	<a name="!unfreeze"></a>
+	!unfreeze
+	</td><td>
+	F
+	</td><td>
+	YES
+	</td><td>
+	!unfreeze [NAME|SLOT]
+	</td><td>
+	Unfreezes the client in slot number SLOT or with name containing NAME.
+	If no parameter is provided it unfreezes all players.
+</td></tr>
+
 </table>
 </dl>
 <br>
